SDL2_gfx ChangeLog

Mon, Jun 09, 2014  8:48:50 AM
- removed VS2010 solution files; updated VS2012 solution files for SDL2 updates

Mon, Jun 02, 2014  7:36:24 AM
- add patch for pkg-config support (thanks Sylvain)
- update tests to use SDLTest library
- fix commandline parsing in testgfx

Mon, May 12, 2014  7:29:24 AM
- fixed BoxRGBA size-off-by-1 error (thanks Stefan for reporting)

Sun, Feb 02, 2014 12:00:00 PM
- fixed and optimized rotateSurface90Degrees
- updated testrotozoom to allow specification of test range

Sun, Nov 03, 2013 10:11:16 AM
- updated testgfx program for benchmarking primitive rendering performance
- updated test programs based on VS warnings
- fixed VS2012 solution for Release build
 
Mon, Oct 28, 2013  8:00:05 AM
- bugfix to _aaline special cases
- added image filter functions
- added to documentation
- updated readme and changelog
- updated solutions for VS2010 and VS2012

Tue, Sep 04, 2012  8:27:44 AM
- initial release of development version (partially finished)